--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
   background-color: #444444;
   border-radius: 1vmin; }
 
-.square {
+.tile {
   --y: 2;
   --x: 2;
   position: absolute;
@@ -39,8 +39,8 @@ body {
   border-radius: 1vmin;
   font-size: 8vmin;
   font-weight: bold;
-  background-color: whitesmoke;
-  color: #222222;
+  background-color: hsl(25, 60%, var(--bg-lightness));
+  color: hsl(25, 40%, var(--text-lightness));
   transition: 0.5s;
   animation: show 1s; }
 
